[gd_scene load_steps=9 format=3 uid="uid://p08shaauj6w6"]

[ext_resource type="Script" path="res://componets/Enemy Folder/PhysSentry/sentryGenericCode.gd" id="1_8mfsi"]
[ext_resource type="Resource" uid="uid://nj6a23nrn624" path="res://componets/bullets/classicbullet/Classic_Bullet_Resource.tres" id="2_m66nf"]

[sub_resource type="CylinderMesh" id="CylinderMesh_q6wdc"]
top_radius = 0.15
bottom_radius = 0.05
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jnhq4"]
radius = 0.125
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gqcmx"]
radius = 0.1
height = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_t8tf8"]
inner_radius = 0.4
outer_radius = 0.75

[sub_resource type="SphereShape3D" id="SphereShape3D_kwvpo"]
radius = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qonys"]
height = 1.20175
radius = 0.75

[node name="ModSentryX1" type="AnimatableBody3D" node_paths=PackedStringArray("TurretHead", "TurnTable", "BulletSpawnPoint", "IdleTarget", "CooldownTimer", "intruderDetector")]
script = ExtResource("1_8mfsi")
TurretHead = NodePath("body/barrel")
TurnTable = NodePath("body")
BulletSpawnPoint = NodePath("body/barrel/BulletSpawnPoint")
IdleTarget = NodePath("IdlePointTarget")
rotationSpeed = 89.72
barrelSpeed = 200.0
CooldownTimer = NodePath("CoolDown_Timer")
Bullet_Info = ExtResource("2_m66nf")
intruderDetector = NodePath("IntruderArea")

[node name="body" type="Node3D" parent="."]

[node name="barrel" type="Node3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="body/barrel"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_q6wdc")

[node name="BulletSpawnPoint" type="Node3D" parent="body/barrel"]

[node name="neck" type="MeshInstance3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_jnhq4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.345, -0.125)
mesh = SubResource("CapsuleMesh_gqcmx")

[node name="base" type="MeshInstance3D" parent="."]
mesh = SubResource("TorusMesh_t8tf8")

[node name="CoolDown_Timer" type="Timer" parent="."]
one_shot = true

[node name="IntruderArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="IntruderArea"]
shape = SubResource("SphereShape3D_kwvpo")

[node name="IdlePointTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.568942, 0)
shape = SubResource("CylinderShape3D_qonys")

[connection signal="body_entered" from="IntruderArea" to="." method="_on_intruder_area_body_entered"]
[connection signal="body_exited" from="IntruderArea" to="." method="_on_intruder_area_body_exited"]
